Fixed file names with leading characters

--- a/Login.html
+++ b/Login.html
@@ -21,8 +21,8 @@
                     <a href="Privacy.html">Privacy Policy</a>
                 </div>
             </li>
-            <li><a href="home.html#gotocontact">Contact Us</a></li>
-            <li><a class="logn" href="Home.html#goto">Signup</a></li>
+            <li><a href="index.html#gotocontact">Contact Us</a></li>
+            <li><a class="logn" href="index.html#goto">Signup</a></li>
         </ul>
     </div>
 </header>
@@ -35,7 +35,7 @@
             <button type="submit">Login</button>
         </form>
         <div class="links">
-            <p>New User? <a href="Home.html#goto"> Signup</a></p>
+            <p>New User? <a href="index.html#goto"> Signup</a></p>
             <a href="Terms.html">Need Help?</a>
         </div>
     </div>
