--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a href="Privacy.html">Privacy Policy</a>
                     </div>
                 </li>
-                <li><a href="#gotocontact">Contact Us</a></li>
+                <li><a href="index.html#gotocontact">Contact Us</a></li>
                 <li><a class="logn" href="Login.html">Login</a></li>
             </ul>
         </div>
@@ -113,6 +113,7 @@
                     <input type="email" name="email" placeholder="Your email address" required>
                     <button type="submit">Subscribe</button>
                 </form>
+
             </div>
             <div class="footer-section">
                 <h3>Follow Us</h3>
